<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity"
    android:background="@color/colorPrimary"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.MainActivity"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    >
    <com.smarteist.autoimageslider.SliderLayout
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:id="@+id/image_slider"
        android:layout_margin="@dimen/slider"
       />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
    <com.rey.material.widget.Button
        android:id="@+id/btn_news"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_margin="@dimen/slider"

        android:background="@drawable/btn_shape"
        android:paddingEnd="22dp"


        android:text="@string/ac_main_news"
        android:fontFamily="@font/font_one"
        android:textAlignment="viewEnd"
        android:textColor="@color/white"
        android:textSize="@dimen/text_main_size"
        app:rd_backgroundColor="#ffffff"
        app:rd_enable="true"
        app:rd_rippleColor="#aaaa"
        app:rd_rippleType="wave"
        tools:ignore="RtlSymmetry"
        />
        <ImageView
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/btn_news"
            android:layout_alignBottom="@+id/btn_news"
            android:layout_marginLeft="11dp"
            android:layout_marginTop="9dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/news"
            android:elevation="200dp" />
    </RelativeLayout>
<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <com.rey.material.widget.Button
        android:id="@+id/btn_events"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_margin="@dimen/slider"

        android:text="@string/ac_main_event"
        android:fontFamily="@font/font_one"
        android:textAlignment="viewEnd"
        android:textColor="@color/white"
        android:textSize="@dimen/text_main_size"
        android:paddingEnd="22dp"


        android:background="@drawable/btn_shape"
        app:rd_backgroundColor="#ffffff"
        app:rd_enable="true"
        app:rd_rippleColor="#aaaa"
        app:rd_rippleType="wave"

        tools:ignore="RtlSymmetry"
        />
    <ImageView
        android:layout_width="86dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btn_events"
        android:layout_alignBottom="@+id/btn_events"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/calendar"
        android:elevation="200dp"
        />
</RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/card_size"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        >
<RelativeLayout
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_weight="2"
    >
        <com.rey.material.widget.Button
            android:id="@+id/btn_map"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_marginEnd="@dimen/card_div_margin"
            android:layout_marginTop="@dimen/card_margin"
            android:layout_marginBottom="@dimen/card_margin"
            android:layout_marginStart="@dimen/card_margin"

            android:background="@drawable/btn_shape"

            android:text="@string/ac_main_map"
            android:fontFamily="@font/font_one"
            android:textAlignment="viewEnd"
            android:textColor="@color/white"
            android:textSize="@dimen/card_text"
            android:paddingEnd="6dp"
            app:rd_backgroundColor="#ffffff"
            app:rd_enable="true"

            app:rd_rippleColor="#aaaa"
            app:rd_rippleType="wave"
            tools:ignore="RtlSymmetry"
            />
    <ImageView
        android:layout_width="73dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btn_map"
        android:layout_alignBottom="@+id/btn_map"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="19dp"
        android:layout_marginBottom="7dp"
        android:background="@drawable/college"
        android:elevation="200dp"
        />
</RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            >
        <com.rey.material.widget.Button
            android:id="@+id/btn_bus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/card_margin"
            android:layout_marginTop="@dimen/card_margin"
            android:layout_marginBottom="@dimen/card_margin"
            android:layout_marginStart="@dimen/card_div_margin"


            android:text="@string/ac_main_bus"
            android:fontFamily="@font/font_one"
            android:textAlignment="viewEnd"
            android:textColor="@color/white"
            android:textSize="@dimen/card_text"
            android:paddingEnd="6dp"

            android:background="@drawable/btn_shape"
            app:rd_backgroundColor="#ffffff"
            app:rd_enable="true"
            app:rd_rippleColor="#aaaa"
            app:rd_rippleType="wave"

            />
            <ImageView
                android:layout_width="77dp"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/btn_bus"
                android:layout_alignBottom="@+id/btn_bus"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="3dp"
                android:background="@drawable/bus"
                android:elevation="200dp"
                />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/card_size"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        >
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            >
        <com.rey.material.widget.Button
            android:id="@+id/btn_tick"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/card_div_margin"
            android:layout_marginTop="@dimen/card_margin"
            android:layout_marginBottom="@dimen/card_margin"
            android:layout_marginStart="@dimen/card_margin"

            android:text="@string/ac_main_tick"
            android:fontFamily="@font/font_one"
            android:textAlignment="viewEnd"
            android:textColor="@color/white"
            android:textSize="@dimen/card_text"
            android:paddingEnd="6dp"

            android:background="@drawable/btn_shape"
            app:rd_backgroundColor="#ffffff"
            app:rd_enable="true"
            app:rd_rippleColor="#aaaa"
            app:rd_rippleType="wave"

            />
            <ImageView
                android:layout_width="86dp"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/btn_tick"
                android:layout_alignBottom="@+id/btn_tick"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="3dp"
                android:background="@drawable/tick"
                android:elevation="200dp"
                />
        </RelativeLayout>
<RelativeLayout
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_weight="3"
    >
        <com.rey.material.widget.Button
            android:id="@+id/btn_guide"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/card_margin"
            android:layout_marginTop="@dimen/card_margin"
            android:layout_marginBottom="@dimen/card_margin"
            android:layout_marginStart="@dimen/card_div_margin"


            android:text="@string/ac_main_guide"
            android:fontFamily="@font/font_one"
            android:textAlignment="viewEnd"
            android:textColor="@color/white"
            android:textSize="@dimen/card_text"
            android:paddingEnd="6dp"

            android:background="@drawable/btn_shape"
            app:rd_backgroundColor="#ffffff"
            app:rd_enable="true"
            app:rd_rippleColor="#aaaa"
            app:rd_rippleType="wave"

            tools:ignore="RtlSymmetry"
            />
    <ImageView
        android:layout_width="87dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btn_guide"
        android:layout_alignBottom="@+id/btn_guide"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="11dp"
        android:layout_marginBottom="3dp"
        android:background="@drawable/support"
        android:elevation="200dp"
        />
</RelativeLayout>
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/card_size"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        >
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            >
        <com.rey.material.widget.Button
            android:id="@+id/btn_help"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/card_div_margin"
            android:layout_marginTop="@dimen/card_margin"
            android:layout_marginBottom="@dimen/card_margin"
            android:layout_marginStart="@dimen/card_margin"

            android:text="@string/ac_main_payment"
            android:fontFamily="@font/font_one"
            android:textAlignment="viewEnd"
            android:textColor="@color/white"
            android:textSize="@dimen/card_text"
            android:paddingEnd="6dp"

            android:background="@drawable/btn_shape"
            app:rd_backgroundColor="#ffffff"
            app:rd_enable="true"
            app:rd_rippleColor="#aaaa"
            app:rd_rippleType="wave"

            />
            <ImageView
                android:layout_width="82dp"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/btn_help"
                android:layout_alignBottom="@+id/btn_help"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="21dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/give"
                android:elevation="200dp"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            >
        <com.rey.material.widget.Button
            android:id="@+id/btn_about_us"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/card_margin"
            android:layout_marginTop="@dimen/card_margin"
            android:layout_marginBottom="@dimen/card_margin"
            android:layout_marginStart="@dimen/card_div_margin"

            android:text="@string/ac_main_about_us"
            android:fontFamily="@font/font_one"
            android:textAlignment="viewEnd"
            android:textColor="@color/white"
            android:textSize="@dimen/card_text"
            android:paddingEnd="6dp"

            android:background="@drawable/btn_shape"
            app:rd_backgroundColor="#ffffff"
            app:rd_enable="true"
            app:rd_rippleColor="#aaaa"
            app:rd_rippleType="wave"

            />
            <ImageView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/btn_about_us"
                android:layout_alignBottom="@+id/btn_about_us"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="6dp"
                android:background="@drawable/technology"
                android:elevation="200dp"
                />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
</ScrollView>